<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Vside</string>

    <string name="kakao_app_key">e20ec75ca7af711c440a6a61dd7ebb58</string>

    <string name="failed_message">%1$s에 실패하였습니다.</string>
    <string name="login_with_kakao">카카오로 3초 만에 시작하기</string>
    <string name="book_image">책 이미지</string>
    <string name="bookmark">북마크</string>
    <string name="filter_tab_title">Search your favorite</string>
    <string name="my_page_empty_main" tools:ignore="TypographyEllipsis">Empty...</string>
    <string name="my_page_empty_main_sub">ZZ</string>
    <string name="my_page_empty_sub">아직 북마크한 컨텐츠가 없어요.\n책장을 채워넣어보세요!</string>
    <string name="my_page_inquiry">1:1 문의</string>
    <string name="my_page_terms_of_service">서비스 이용방침</string>
    <string name="my_page_privacy_policy">개인정보 처리방안</string>
    <string name="my_page_log_out">로그아웃</string>
    <string name="my_page_withdraw">탈퇴하기</string>
    <string name="my_page_see_all">전체보기</string>
    <string name="back">뒤로 가기</string>
    <string name="login_main">VIVID, INSIDE</string>
    <string name="confirm">YES</string>
    <string name="cancel">NO</string>
    <string name="dialog_two_btn_divider">/</string>
    <string name="complete">완료하기</string>
    <string name="filter_select_cancel_all">모두취소</string>
    <string name="filter_select_subtitle1">원하는&#160;</string>
    <string name="filter_select_subtitle2">카테고리</string>
    <string name="filter_select_subtitle3">를 선택해보세요!</string>
    <string name="filter_select_title">어떤 책을 찾고 계신가요?</string>
    <string name="filter_select_open">OPEN</string>
    <string name="sign_up_nickname_hint">닉네임을 입력해주세요</string>
    <string name="sign_up_begin">시작하기</string>
    <string name="logo">로고</string>
    <string name="loading">로딩</string>
    <string name="login_dialog_title">10초만에 로그인하기</string>
    <string name="login_dialog_subtitle">이 컨텐츠가 마음에 드셨나요?\n로그인하고 내 성향에 맞는 책을 찾아봐요!</string>
    <string name="login_lookaround">먼저 둘러보기</string>
    <string name="my_page_log_in">로그인하기</string>
</resources>