<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.vside.app.feature.filter.FilterSelectViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_filter_select">
        <androidx.cardview.widget.CardView
            android:id="@+id/cv_filter_select_bar"
            android:layout_width="56dp"
            android:layout_height="6dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="10dp"
            app:cardBackgroundColor="@color/main400"
            app:cardElevation="0dp"
            app:cardCornerRadius="3dp"/>
        <TextView
            android:id="@+id/tv_filter_select_open"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter_select_open"
            style="@style/TextAppearance.AppCompat.SM_SB"
            android:textColor="@color/main500"
            app:layout_constraintTop_toBottomOf="@id/cv_filter_select_bar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="6dp"/>
        <TextView
            android:id="@+id/tv_filter_select_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter_select_title"
            app:layout_constraintTop_toBottomOf="@id/cv_filter_select_bar"
            android:layout_marginTop="32dp"
            android:layout_marginHorizontal="@dimen/default_horizontal_margin"
            app:layout_constraintStart_toStartOf="parent"
            style="@style/TextAppearance.AppCompat.XL_B"
            android:textColor="@color/g900"
            />
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_filter_select_sub_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_filter_select_title"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginHorizontal="@dimen/default_horizontal_margin"
            android:layout_marginTop="8dp">

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="8dp"
                app:layout_constraintStart_toStartOf="@id/tv_filter_select_subtitle2"
                app:layout_constraintEnd_toEndOf="@id/tv_filter_select_subtitle2"
                app:layout_constraintBottom_toBottomOf="parent"
                app:cardElevation="0dp"
                app:cardCornerRadius="5dp"
                app:cardBackgroundColor="#E0FDBB"/>
            <TextView
                android:id="@+id/tv_filter_select_subtitle1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/filter_select_subtitle1"
                style="@style/TextAppearance.AppCompat.BASE_R"
                android:textColor="@color/g700"/>
            <TextView
                android:id="@+id/tv_filter_select_subtitle2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/tv_filter_select_subtitle1"
                android:text="@string/filter_select_subtitle2"
                style="@style/TextAppearance.AppCompat.BASE_R"
                android:textColor="@color/g700"/>
            <TextView
                android:id="@+id/tv_filter_select_subtitle3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/tv_filter_select_subtitle2"
                android:text="@string/filter_select_subtitle3"
                style="@style/TextAppearance.AppCompat.BASE_R"
                android:textColor="@color/g700"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <View
            android:id="@+id/view_filter_select_divider1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/g50"
            app:layout_constraintTop_toBottomOf="@id/cl_filter_select_sub_title"
            android:layout_marginTop="24dp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_filter_select_category"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/view_filter_select_divider1"
            app:layout_constraintBottom_toTopOf="@id/tv_filter_select_complete"
            android:paddingTop="20dp"
            android:clipToPadding="false"
            android:paddingHorizontal="26dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:orientation="vertical"
            tools:listitem="@layout/item_category"
            />

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="10dp"
            app:cardBackgroundColor="@color/g25"
            android:elevation="50dp"
            android:layout_marginEnd="@dimen/default_horizontal_margin"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="@id/rv_filter_select_category"
            app:layout_constraintEnd_toEndOf="@id/rv_filter_select_category">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filter_select_cancel_all"
                style="@style/TextAppearance.AppCompat.SM_R"
                android:textColor="@color/g700"
                android:layout_marginHorizontal="11dp"
                android:layout_marginVertical="8dp"
                app:drawableStartCompat="@drawable/ic_refresh" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tv_filter_select_complete"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="@color/color_bg_filter_select_complete"
            android:text="@string/complete"
            android:gravity="center"
            tools:background="@color/main500"
            style="@style/TextAppearance.AppCompat.LG_M"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>