<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.vside.app.feature.common.view.LoginDialogViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_bottom_sheet">

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_filter_select_bar"
            android:layout_width="56dp"
            android:layout_height="6dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="10dp"
            app:cardBackgroundColor="@color/main400"
            app:cardElevation="0dp"
            app:cardCornerRadius="3dp"/>

        <TextView
            android:id="@+id/tv_login_dialog_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_dialog_title"
            app:layout_constraintTop_toBottomOf="@id/cv_filter_select_bar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textColor="@color/g950"
            style="@style/TextAppearance.AppCompat.XL_B"
            android:layout_marginTop="42dp"/>
        <TextView
            android:id="@+id/tv_login_dialog_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/login_dialog_subtitle"
            style="@style/TextAppearance.AppCompat.SM_M"
            android:textColor="@color/g600"
            app:layout_constraintTop_toBottomOf="@id/tv_login_dialog_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="18dp"/>
        <com.vside.app.feature.auth.view.LoginBtnView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="@{()->viewModel.onKakaoClick()}"
            app:loginBgColor="@color/kakao_color"
            app:loginText="@string/login_with_kakao"
            app:loginTextColor="@color/black"
            app:loginIcon="@drawable/ic_kakao"
            app:layout_constraintTop_toBottomOf="@id/tv_login_dialog_subtitle"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="34dp"
            android:layout_marginBottom="58dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>