<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View"/>
        <variable
            name="viewModel"
            type="com.vside.app.feature.mypage.MyPageViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_action_bar"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            app:layout_constraintTop_toTopOf="parent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="@dimen/default_horizontal_margin"
                android:text="@{viewModel.userName + `'s Bookshelf`}"
                tools:text="데비's Bookshelf"
                style="@style/TextAppearance.AppCompat.XL_B"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/cl_action_bar"
            app:layout_constraintBottom_toBottomOf="parent">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="72dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/cl_my_page_book_shelf"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    android:background="@color/g25">
                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toTopOf="parent"
                        android:orientation="horizontal">
                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:visibility="@{viewModel.scrapList == null || viewModel.scrapList.empty ? View.GONE : View.VISIBLE}">
                            <TextView
                                android:id="@+id/tv_my_page_show_all"
                                android:layout_width="wrap_content"
                                android:layout_height="40dp"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent"
                                android:text="@string/my_page_see_all"
                                android:gravity="center"
                                android:layout_marginTop="4dp"
                                android:layout_marginStart="@dimen/default_horizontal_margin"
                                style="@style/TextAppearance.AppCompat.XS_R"
                                android:onClick="@{()->viewModel.onSeeAllClick()}"
                                android:textColor="@color/g800"
                                android:drawablePadding="2dp"
                                app:drawableEndCompat="@drawable/ic_more" />
                            <androidx.recyclerview.widget.RecyclerView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                app:layout_constraintTop_toBottomOf="@id/tv_my_page_show_all"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                                android:orientation="horizontal"
                                android:layout_marginBottom="32dp"
                                android:paddingHorizontal="10dp"
                                android:clipToPadding="false"
                                bind:dino_items="@{viewModel.scrapList}"
                                bind:dino_itemLayout="@{@layout/item_my_page_book_shelf}"
                                tools:listitem="@layout/item_my_page_book_shelf"
                                app:spanCount="2"/>
                        </androidx.constraintlayout.widget.ConstraintLayout>
                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:visibility="@{viewModel.scrapList == null || viewModel.scrapList.empty ? View.VISIBLE : View.GONE}">
                            <TextView
                                android:id="@+id/tv_my_page_empty_main"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/my_page_empty_main"
                                style="@style/TextAppearance.AppCompat.LG_EB"
                                android:textColor="@color/main500"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintTop_toTopOf="parent"
                                app:layout_constraintBottom_toTopOf="@id/tv_my_page_empty_sub"
                                android:layout_marginTop="47dp"/>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/my_page_empty_main_sub"
                                style="@style/TextAppearance.AppCompat.2XS_EB"
                                android:textColor="@color/main400"
                                app:layout_constraintTop_toTopOf="@id/tv_my_page_empty_main"
                                app:layout_constraintBottom_toTopOf="@id/tv_my_page_empty_main"
                                app:layout_constraintStart_toEndOf="@id/tv_my_page_empty_main"/>
                            <TextView
                                android:id="@+id/tv_my_page_empty_sub"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/my_page_empty_sub"
                                style="@style/TextAppearance.AppCompat.SM_R"
                                android:textColor="@color/g400"
                                android:gravity="center"
                                app:layout_constraintTop_toBottomOf="@id/tv_my_page_empty_main"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintBottom_toBottomOf="parent"
                                android:layout_marginBottom="41dp"
                                android:layout_marginTop="20dp"/>
                        </androidx.constraintlayout.widget.ConstraintLayout>
                    </androidx.appcompat.widget.LinearLayoutCompat>
                </androidx.constraintlayout.widget.ConstraintLayout>
                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/cl_my_page_book_shelf"
                    android:paddingTop="20dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        style="@style/TextAppearance.AppCompat.SM_M"
                        android:onClick="@{()->viewModel.onInquiryClick()}"
                        android:gravity="center_vertical"
                        android:paddingHorizontal="@dimen/default_horizontal_margin"
                        android:text="@string/my_page_inquiry"
                        android:textColor="@color/g600"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        style="@style/TextAppearance.AppCompat.SM_M"
                        android:onClick="@{()->viewModel.onTermsOfServiceClick()}"
                        android:gravity="center_vertical"
                        android:paddingHorizontal="@dimen/default_horizontal_margin"
                        android:text="@string/my_page_terms_of_service"
                        android:textColor="@color/g600"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        style="@style/TextAppearance.AppCompat.SM_M"
                        android:onClick="@{()->viewModel.onPrivacyPolicyClick()}"
                        android:gravity="center_vertical"
                        android:paddingHorizontal="@dimen/default_horizontal_margin"
                        android:text="@string/my_page_privacy_policy"
                        android:textColor="@color/g600"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        style="@style/TextAppearance.AppCompat.SM_M"
                        android:onClick="@{()->viewModel.onLogoutClick()}"
                        android:gravity="center_vertical"
                        android:paddingHorizontal="@dimen/default_horizontal_margin"
                        android:text="@string/my_page_log_out"
                        android:textColor="@color/g600"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        style="@style/TextAppearance.AppCompat.SM_M"
                        android:onClick="@{()->viewModel.onWithDrawClick()}"
                        android:gravity="center_vertical"
                        android:paddingHorizontal="@dimen/default_horizontal_margin"
                        android:text="@string/my_page_withdraw"
                        android:textColor="@color/g400"/>
                </androidx.appcompat.widget.LinearLayoutCompat>
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>