<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".feature.content.ContentActivity">

    <data>
        <variable
            name="viewModel"
            type="com.vside.app.feature.content.ContentViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar_layout_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/collapsing_toolbar_layout_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/black"
                app:scrimAnimationDuration="100"
                app:contentScrim="@color/white"
                app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:src="@drawable/img_home_test"
                    android:adjustViewBounds="true"
                    android:scaleType="fitCenter"
                    app:layout_collapseMode="parallax"
                    bind:imgUrl="@{viewModel.contentImgUrl}"
                    android:contentDescription="@string/book_image" />
                <com.google.android.material.appbar.MaterialToolbar
                    android:id="@+id/toolbar_content"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    app:contentInsetStart="0dp"
                    app:layout_collapseMode="pin"
                    app:elevation="0dp"
                    >
                    <ImageView
                        android:id="@+id/iv_back_content"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/ic_back"
                        android:layout_marginStart="7dp"
                        android:padding="13dp"
                        bind:contentBackBtnLightBg="@{viewModel.isLightBg()}"
                        bind:contentBackBtnCollapsed="@{viewModel.isContentImgCollapsed()}"
                        android:contentDescription="@string/back"
                        />
                    
                    <ImageView
                        android:id="@+id/iv_bookmark_content"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/ic_bookmark"
                        android:padding="13dp"
                        android:layout_gravity="end"
                        android:layout_marginEnd="7dp"
                        android:onClick="@{()->viewModel.onBookmarkClick()}"
                        bind:contentBookmarkLightBg="@{viewModel.isLightBg()}"
                        bind:contentBookmarkCollapsed="@{viewModel.isContentImgCollapsed()}"
                        bind:contentBookmarkActivated="@{viewModel.isBookmarked()}"
                        android:contentDescription="@string/bookmark"/>
                </com.google.android.material.appbar.MaterialToolbar>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginBottom="38dp"
                    android:layout_marginHorizontal="@dimen/default_horizontal_margin"
                    app:layout_collapseMode="parallax"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/tv_content_upload_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/TextAppearance.AppCompat.XS_M"
                        android:textColor="@color/white"
                        bind:contentTitleDateLightBg="@{viewModel.isLightBg()}"
                        tools:text="2022 . 09 . 12"/>
                    <TextView
                        android:id="@+id/tv_content_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        style="@style/TextAppearance.AppCompat.3XL_B"
                        android:textColor="@color/white"
                        android:text="@{viewModel.title}"
                        bind:contentTitleDateLightBg="@{viewModel.isLightBg()}"
                        tools:text="이것이 지극한 사랑에 대한\n소설이기를 바란다."/>
                </LinearLayout>
            </com.google.android.material.appbar.CollapsingToolbarLayout>
        </com.google.android.material.appbar.AppBarLayout>
        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white">
                <ProgressBar
                    android:id="@+id/progress_circular_content"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:indeterminateTint="@color/g600"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>
                <WebView
                    android:id="@+id/web_view_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>